--- a/rush.yaml
+++ b/rush.yaml
@@ -152,6 +152,11 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Over Rush Rare
+  - set_number: RD/EPP1-KR048
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 707848
 ---
 konami_id: 15151
@@ -1185,6 +1190,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Over Rush Rare
+  - set_number: RD/EPP1-KR049
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 715960
 ---
 konami_id: 15165
@@ -10423,6 +10433,11 @@ sets:
     set_name: Rush Duel Launch Commemorative Pack
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR037
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 714189
 ---
 konami_id: 15583
@@ -24642,6 +24657,11 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
+  - set_number: RD/EPP1-KR034
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 714551
 ---
 konami_id: 16151
@@ -28280,6 +28300,11 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/EPP1-KR041
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -32708,6 +32733,11 @@ sets:
     set_name: Event Pack 2021 EX Vol.1
     rarities:
     - Secret Rare
+  - set_number: RD/EPP1-KR046
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 717299
 ---
 konami_id: 16371
@@ -36285,6 +36315,11 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR031
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -36497,6 +36532,11 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Rush Rare
+  - set_number: RD/EPP1-KR042
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 714423
 ---
 konami_id: 16658
@@ -43620,6 +43660,11 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/EPP1-KR047
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -47500,6 +47545,11 @@ sets:
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/EPP1-KR038
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -52804,6 +52854,12 @@ sets:
     set_name: Saikyō Jump December 2021 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR002
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -52886,6 +52942,12 @@ sets:
     rarities:
     - Common
     - Super Rare
+  ko:
+  - set_number: RD/EPP1-KR003
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -54998,6 +55060,12 @@ sets:
     set_name: Victory Pack Maximal Multistrike Dragon
     rarities:
     - Secret Rare
+  ko:
+  - set_number: RD/EPP1-KR004
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -55079,6 +55147,12 @@ sets:
     set_name: Victory Pack Maximal Multistrike Dragon
     rarities:
     - Secret Rare
+  ko:
+  - set_number: RD/EPP1-KR005
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -55142,6 +55216,12 @@ sets:
   - set_number: RD/VP02-JP003
     set_name: Victory Pack Maximal Multistrike Dragon
     rarities:
+    - Secret Rare
+  ko:
+  - set_number: RD/EPP1-KR006
+    set_name: Express Pack
+    rarities:
+    - Common
     - Secret Rare
 is_translation_unofficial:
   name:
@@ -55506,6 +55586,11 @@ sets:
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/EPP1-KR007
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -56215,6 +56300,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR036
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -60273,6 +60363,12 @@ sets:
     set_name: Battle Pack 2023 Vol.2
     rarities:
     - Common
+  ko:
+  - set_number: RD/EPP1-KR008
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -60337,6 +60433,12 @@ sets:
     set_name: Saikyō Jump April 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR009
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -60538,6 +60640,12 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel LP Volume 1 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: RD/EPP1-KR011
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -64304,6 +64412,11 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR023
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -65105,6 +65218,11 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/EPP1-KR028
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -65526,6 +65644,11 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/EPP1-KR035
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -67798,6 +67921,12 @@ sets:
     set_name: Saikyō Jump June 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR010
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -69330,6 +69459,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Ultra Rare
+  - set_number: RD/EPP1-KR039
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -71636,6 +71770,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR033
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -71889,6 +72028,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Ultra Rare
+  - set_number: RD/EPP1-KR027
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -72097,6 +72241,12 @@ sets:
     set_name: Saikyō Jump July 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR012
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -72624,6 +72774,12 @@ sets:
     set_name: Jump Victory Carnival 2022 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: RD/EPP1-KR001
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 715663
 ---
 konami_id: 17848
@@ -72691,6 +72847,11 @@ sets:
     rarities:
     - Secret Rare
     - Rush Rare
+  - set_number: RD/EPP1-KR044
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -74268,6 +74429,7 @@ series:
 images:
 - index: 1
   image: VoidvelgrRequiem-RDS224-JP-ScR.png
+  illustration: VoidvelgrRequiem-G002-JP-VG-artwork.png
 - index: 2
   image: VoidvelgrRequiem-RD711B-JP-NPR.png
 sets:
@@ -74295,6 +74457,11 @@ sets:
     set_name: Strongest Battle Deck Promotion Pack
     rarities:
     - Secret Rare
+  - set_number: RD/EPP1-KR050
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -75073,6 +75240,11 @@ sets:
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR029
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -76979,6 +77151,11 @@ sets:
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR025
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -77659,6 +77836,11 @@ sets:
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
     rarities:
     - Common
+  - set_number: RD/EPP1-KR024
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -81001,6 +81183,12 @@ sets:
     set_name: Saikyō Jump October 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR013
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -85989,6 +86177,12 @@ sets:
     set_name: Saikyō Jump November 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR014
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -86124,6 +86318,12 @@ sets:
     set_name: Saikyō Jump December 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR015
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -91229,6 +91429,12 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel LP Volume 2 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: RD/EPP1-KR016
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -91381,6 +91587,12 @@ sets:
     set_name: Saikyō Jump February 2023 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR017
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -96746,7 +96958,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up LIGHT Attribute Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you have "Transamu Rainac" face-up on your field, you can change the battle position of 1 face-up monster on your opponent's field.
+    Choose 1 face-up LIGHT Attribute Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if you have "Transamu Rainac" face-up on your field, you can change the battle position of 1 face-up monster on your opponent's field.
   de:
   es:
   fr:
@@ -96774,6 +96986,12 @@ sets:
     set_name: Saikyō Jump March 2023 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR018
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -96887,6 +97105,12 @@ sets:
     set_name: Saikyō Jump April 2023 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR019
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -96952,9 +97176,11 @@ sets:
     rarities:
     - Ultra Rare
   ko:
-  - set_number: RD/EPP1-KR???
+  - set_number: RD/EPP1-KR022
     set_name: Express Pack
     rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -102206,9 +102432,11 @@ sets:
     rarities:
     - Normal Parallel Rare
   ko:
-  - set_number: RD/EPP1-KR???
+  - set_number: RD/EPP1-KR020
     set_name: Express Pack
     rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -102518,6 +102746,12 @@ sets:
     set_name: Saikyō Jump June 2023 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR021
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -118590,19 +118824,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの上からカード２枚を墓地へ送り、自分フィールドの表側表示のこのカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" from your hand to your field in face-up Defense Position. Then, you can add 1 "Dragon's Boost Fusion" or "Dragon's Burst Fusion" from your Graveyard to your hand.
+    Special Summon 1 "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" from your hand to your field in face-up Defense Position. Then, you can add 1 "Dragon's Burst Fusion" or "Dragon's Boost Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札の「碧牙の爆速竜」または「真紅動の撃速竜」１体を自分フィールドに表側守備表示で特殊召喚する。その後、自分の墓地の「ドラゴンズ・バースト・フュージョン」または「ドラゴンズ・ブースト・フュージョン」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -118652,7 +118888,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（ドラゴン族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118664,7 +118901,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの裏側表示モンスター１体を選んで表側攻撃表示にする。自分フィールドの表側表示モンスターがモンスター（ドラゴン族）のみの場合、さらに自分の墓地の「フリップ・ドラゴン」１体を選んで自分フィールドに表側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118714,7 +118952,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（ドラゴン族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118726,7 +118965,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの攻撃表示モンスター１体を選んで裏側守備表示にする。自分フィールドの表側表示モンスターがモンスター（ドラゴン族）のみの場合、さらに自分の墓地の「フラップ・ドラゴン」１体を選んで自分フィールドに表側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118776,7 +119016,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札１枚をデッキの下に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118788,7 +119029,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル１／光属性・闇属性／ドラゴン族）１体を選んで手札に加える。その後、自分の墓地の「ドラゴンズ・バースト・フュージョン」または「ドラゴンズ・ブースト・フュージョン」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -118834,7 +119076,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手ターンに相手がドローした時、または相手ターンに相手がモンスターを召喚・特殊召喚した時、自分フィールドのモンスター１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118846,7 +119089,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、相手は１回しか攻撃宣言できない。さらに、相手フィールドの元々の攻撃力が３０００の表側表示のフュージョンモンスター（レベル９以上／魔導騎士族）１体を選んでそのコントロールを得る事ができる。
   ko:
   zh-TW:
   zh-CN:
