--- a/data/cards/42829885.yaml
+++ b/data/cards/42829885.yaml
@@ -8,7 +8,7 @@ name:
   it: La Sentinella Potente
   pt: O Sentinela Forte
   ja: <ruby>強<rt>ごう</rt></ruby><ruby>引<rt>いん</rt></ruby>な<ruby>番<rt>ばん</rt></ruby><ruby>兵<rt>ぺい</rt></ruby>
-  ja_romaji: Gōin na Banhei
+  ja_romaji: Gōin na Banpei
   ko: 강인한 파수병
   ko_rr:
   zh-TW:
