--- a/data/rush/15178.yaml
+++ b/data/rush/15178.yaml
@@ -112,6 +112,10 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Over Rush Rare
+  - set_number: RD/MRP2-JP008
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP01-KR021
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
