--- a/data/rush/15205.yaml
+++ b/data/rush/15205.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: Strongest Battle Deck Yuga - Hyper Machine Road
     rarities:
     - Common
+  - set_number: RD/MRP2-JP022
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP01-KR038
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
