--- a/data/rush/15426.yaml
+++ b/data/rush/15426.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/MRP2-JP009
+    set_name: Megaroad Pack 2
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP02-KR016
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
