--- a/data/rush/yugipedia1018570.yaml
+++ b/data/rush/yugipedia1018570.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 Spellcaster monster from your hand to the Graveyard.
+    Send 1 Spellcaster Type monster from your hand to the Graveyard.
   de:
   es:
   fr:
