--- a/rush.yaml
+++ b/rush.yaml
@@ -72243,7 +72243,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change non-Aqua Type Attack Position monsters on your opponent's field to face-up Defense Position, up to [the number of face-up Aqua Type monsters on your field].
+    Change Attack Position non-Aqua Type  monsters on your opponent's field to face-up Defense Position, up to [the number of face-up Aqua Type monsters on your field].
   de:
   es:
   fr:
@@ -72275,11 +72275,6 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716459
 ---
 konami_id: 17838
@@ -85648,11 +85643,6 @@ sets:
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716719
 ---
 konami_id: 18297
@@ -119381,7 +119371,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 Spellcaster monster from your hand to the Graveyard.
+    Send 1 Spellcaster Type monster from your hand to the Graveyard.
   de:
   es:
   fr:
