--- a/data/cards/04064256.yaml
+++ b/data/cards/04064256.yaml
@@ -35,6 +35,8 @@ text:
     ①：场上的表侧表示怪兽及墓地的怪兽全部变为不死族。②：双方仅可上级召唤不死族怪兽。
 card_type: Spell
 property: Field
+series:
+- Zombie World
 images:
 - index: 1
   image: ZombieWorld-GFP2-EN-UR-1E.png
