--- a/data/cards/38192988.yaml
+++ b/data/cards/38192988.yaml
@@ -53,6 +53,7 @@ series:
 - -Eyes Dragon
 - Red-Eyes
 - Zombie counterpart
+- Zombie World
 images:
 - index: 1
   image: RedEyesZombieDragonLord-MP23-EN-PScR-1E.png
