--- a/data/rush/16798.yaml
+++ b/data/rush/16798.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An unexpectedly powerful armadillo that can deflect anything that comes close. It can use its tank treads to skillfully dig.
+    A surprisingly strong armadillo that bounces back anything close. It can dig dexterously with its track belt.
   de:
   es:
   fr:
@@ -46,7 +46,4 @@ sets:
     set_name: Strongest Battle Deck Asana - Pride of the Heavy Cavalry Style
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713472
