--- a/data/rush/16891.yaml
+++ b/data/rush/16891.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A mechanical doll incapable of expressing emotions outside of laughing. It uses the emotions of its audience as energy.
+    A mechanical doll that has no emotional expression other than a smile. The emotional response from the audience is its main source of energy.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715394
