--- a/data/rush/16892.yaml
+++ b/data/rush/16892.yaml
@@ -1,6 +1,6 @@
 konami_id: 16892
 name:
-  en: Gracesaurus
+  en: Glaciasaurus
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A gentle dinosaur that doesn't like conflict. It's always gracefully watching the audience.
+    A gentle dinosaur who cares not for conflicts. Always with a smile towards an audience.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Metarion
 images:
 - index: 1
-  image: Gracesaurus-RDEXT1-JP-C.png
+  image: Glaciasaurus-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP007
@@ -48,9 +48,4 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715172
