--- a/data/rush/16893.yaml
+++ b/data/rush/16893.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A beautiful dragon that once lived in a clear and pure watering hole. Now it serves as the popular mascot of the circus, adored by the audience.
+    A marvelous dragon that lives beneath the clear waters. He is now the popular mascot of a circus.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716640
