--- a/data/rush/16894.yaml
+++ b/data/rush/16894.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A master swordsman that used to serve a great nation. He controls his flying swords with great precision as the audience watches attentively.
+    A skilled swordsmen that had once served a powerful nation. His sword flies through with unrivaled precision as the crowd holds their breath.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716956
