--- a/data/rush/16905.yaml
+++ b/data/rush/16905.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A swordsman of the shooting stars with unknown powers, capable of carving open a miraculous path.
+    A meteoric swordsman with powers to pave the ways for miracles.
   de:
   es:
   fr:
@@ -50,7 +50,4 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716960
