--- a/data/rush/16910.yaml
+++ b/data/rush/16910.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The dragon of justice signaling supernova clashes! Its name is The Dragon!
+    A dragon of justice that makes you envision a supernova clash! The name is, The Dragon!
   de:
   es:
   fr:
@@ -52,7 +52,4 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717064
