--- a/data/cards/32485518.yaml
+++ b/data/cards/32485518.yaml
@@ -39,6 +39,8 @@ attribute: EARTH
 level: 4
 atk: 1800
 def: 200
+series:
+- Zombie World
 images:
 - index: 1
   image: ImmortalRuler-SR07-EN-C-1E.png
