--- a/data/cards/66570171.yaml
+++ b/data/cards/66570171.yaml
@@ -40,7 +40,7 @@ level: 4
 atk: 1800
 def: 200
 series:
-- Field Searcher
+- Zombie World
 images:
 - index: 1
   image: NecroworldBanshee-GFP2-EN-UR-1E.png
