--- a/data/rush/16889.yaml
+++ b/data/rush/16889.yaml
@@ -51,7 +51,7 @@ atk: 2800
 def: 2500
 materials:
   en: |-
-    "Imaginary Actor" + "Gracesaurus"
+    "Imaginary Actor" + "Glaciasaurus"
   de:
   es:
   fr:
