--- a/data/rush/16904.yaml
+++ b/data/rush/16904.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Straynge Cat" from your Graveyard to your hand. Then, you can draw 1 card. If you drew by this effect, this turn, your Level 6 or lower monsters cannot attack.
+    Add 1 "Straynge Cat" from your Graveyard to your hand. Then, you can draw 1 card. If you drew by this effect, your Level 6 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -60,7 +60,4 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715955
