--- a/rush.yaml
+++ b/rush.yaml
@@ -42531,9 +42531,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715122
 ---
 konami_id: 16784
@@ -42669,9 +42666,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714697
 ---
 konami_id: 16786
@@ -43496,7 +43490,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An unexpectedly powerful armadillo that can deflect anything that comes close. It can use its tank treads to skillfully dig.
+    A surprisingly strong armadillo that bounces back anything close. It can dig dexterously with its track belt.
   de:
   es:
   fr:
@@ -43528,9 +43522,6 @@ sets:
     set_name: Strongest Battle Deck Asana - Pride of the Heavy Cavalry Style
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713472
 ---
 konami_id: 16799
@@ -43674,11 +43665,6 @@ sets:
     rarities:
     - Common
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717298
 ---
 konami_id: 16805
@@ -44081,7 +44067,7 @@ atk: 2800
 def: 2500
 materials:
   en: |-
-    "Imaginary Actor" + "Gracesaurus"
+    "Imaginary Actor" + "Glaciasaurus"
   de:
   es:
   fr:
@@ -44201,7 +44187,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A mechanical doll incapable of expressing emotions outside of laughing. It uses the emotions of its audience as energy.
+    A mechanical doll that has no emotional expression other than a smile. The emotional response from the audience is its main source of energy.
   de:
   es:
   fr:
@@ -44235,14 +44221,11 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715394
 ---
 konami_id: 16892
 name:
-  en: Gracesaurus
+  en: Glaciasaurus
   de:
   es:
   fr:
@@ -44256,7 +44239,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A gentle dinosaur that doesn't like conflict. It's always gracefully watching the audience.
+    A gentle dinosaur who cares not for conflicts. Always with a smile towards an audience.
   de:
   es:
   fr:
@@ -44278,7 +44261,7 @@ series:
 - Metarion
 images:
 - index: 1
-  image: Gracesaurus-RDEXT1-JP-C.png
+  image: Glaciasaurus-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP007
@@ -44290,11 +44273,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715172
 ---
 konami_id: 16893
@@ -44313,7 +44291,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A beautiful dragon that once lived in a clear and pure watering hole. Now it serves as the popular mascot of the circus, adored by the audience.
+    A marvelous dragon that lives beneath the clear waters. He is now the popular mascot of a circus.
   de:
   es:
   fr:
@@ -44347,9 +44325,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716640
 ---
 konami_id: 16894
@@ -44368,7 +44343,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A master swordsman that used to serve a great nation. He controls his flying swords with great precision as the audience watches attentively.
+    A skilled swordsmen that had once served a powerful nation. His sword flies through with unrivaled precision as the crowd holds their breath.
   de:
   es:
   fr:
@@ -44402,9 +44377,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716956
 ---
 konami_id: 16895
@@ -44423,7 +44395,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A very mysterious man who doesn't talk about his past. He captures the attention of the audience by manipulating his baton almost as if it were magic.
+    An enigmatic man who never speaks of his past. His baton wielding shakes the crowd wild, as if it were magic.
   de:
   es:
   fr:
@@ -44457,11 +44429,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715698
 ---
 konami_id: 16896
@@ -45099,7 +45066,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Straynge Cat" from your Graveyard to your hand. Then, you can draw 1 card. If you drew by this effect, this turn, your Level 6 or lower monsters cannot attack.
+    Add 1 "Straynge Cat" from your Graveyard to your hand. Then, you can draw 1 card. If you drew by this effect, your Level 6 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -45131,9 +45098,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715955
 ---
 konami_id: 16905
@@ -45152,7 +45116,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A swordsman of the shooting stars with unknown powers, capable of carving open a miraculous path.
+    A meteoric swordsman with powers to pave the ways for miracles.
   de:
   es:
   fr:
@@ -45188,9 +45152,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716960
 ---
 konami_id: 16906
@@ -45522,9 +45483,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717110
 ---
 konami_id: 16910
@@ -45543,7 +45501,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The dragon of justice signaling supernova clashes! Its name is The Dragon!
+    A dragon of justice that makes you envision a supernova clash! The name is, The Dragon!
   de:
   es:
   fr:
@@ -45581,9 +45539,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717064
 ---
 konami_id: 16911
@@ -45928,7 +45883,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Gain 500 LP. Then, you can add any number of "Red Medicine" from your Graveyard to your hand.
+    Gain 500 LP. Then, if you gained LP by this effect, you can add any number of "Red Medicine" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -45976,9 +45931,6 @@ sets:
     set_name: Strongest Battle Deck Manabu - Chemist-Meow Draw of Flames!
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714266
 ---
 konami_id: 16916
@@ -46047,9 +45999,6 @@ sets:
     set_name: Strongest Battle Deck Manabu - Chemist-Meow Draw of Flames!
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716400
 ---
 konami_id: 16917
@@ -47321,9 +47270,6 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715171
 ---
 konami_id: 16934
@@ -47559,9 +47505,6 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717098
 ---
 konami_id: 16953
@@ -47699,9 +47642,6 @@ sets:
     rarities:
     - Common
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715927
 ---
 konami_id: 16956
