--- a/data/rush/15438.yaml
+++ b/data/rush/15438.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
     rarities:
     - Super Rare
+  - set_number: RD/MRP2-JP077
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP02-KR028
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
