--- a/data/rush/15657.yaml
+++ b/data/rush/15657.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: Character Pack - Gavin/Roa/Romin
     rarities:
     - Secret Rare
+  - set_number: RD/MRP2-JP056
+    set_name: Megaroad Pack 2
+    rarities:
+    - Rare
   ko:
   - set_number: RD/CP01-KR009
     set_name: Character Pack - Gavin/Roa/Romin
