--- a/data/rush/15806.yaml
+++ b/data/rush/15806.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/MRP2-JP076
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP03-KR031
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
