--- a/data/rush/16175.yaml
+++ b/data/rush/16175.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
     rarities:
     - Super Rare
+  - set_number: RD/MRP2-JP058
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP04-KR052
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
